--- a/js/ui/app/web/app.scss
+++ b/js/ui/app/web/app.scss
@@ -9,3 +9,15 @@ body {
   align-items: center;
   flex-direction: column;
 }
+
+#root {
+  height: 100%;
+}
+
+.main-content {
+  margin-top: 64px;
+
+  &__page {
+    padding: 1rem;
+  }
+}
