add number validator

--- a/js/ui/app/web/investment/form/form.scss
+++ b/js/ui/app/web/investment/form/form.scss
@@ -3,3 +3,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.12);
   color:  rgba(255, 255, 255, 0.6);
 }
+
+.form-validation__error {
+  color: #f44336;
+}
