--- a/js/ui/app/web/styles/themes/main/_variables.scss
+++ b/js/ui/app/web/styles/themes/main/_variables.scss
@@ -1,4 +1,5 @@
 $main-bg-color :rgb(48, 48, 48);
-$secondary-bg-color: #ff80ab;
+$secondary-bg-color: #0097a7;
+$alt-bg-color:  #ff80ab;
 
 $secondary-txt-color: rgba(255, 255, 255, 0.54);
