change the color of the box header

--- a/js/ui/app/web/box/box.scss
+++ b/js/ui/app/web/box/box.scss
@@ -7,7 +7,7 @@
 }
 
   .titled-box__header {
-    background-color: $secondary-bg-color;
+    background-color: $alt-bg-color;
     padding: 5px;
   }
 
