--- a/js/ui/app/web/styles/themes/main/_variables.scss
+++ b/js/ui/app/web/styles/themes/main/_variables.scss
@@ -1,5 +1,6 @@
 $main-bg-color :rgb(48, 48, 48);
-$secondary-bg-color: #0097a7;
-$alt-bg-color:  rgb(255, 64, 129);
+$secondary-bg-color: rgb(103, 183, 220);
+$third-bg-color: rgb(253, 212, 0);
+$alt-bg-color: rgb(132, 183, 97);
 
 $secondary-txt-color: rgba(255, 255, 255, 0.54);
