show widgets for the asset tha is currently selected

--- a/js/ui/app/web/styles/themes/main/main.scss
+++ b/js/ui/app/web/styles/themes/main/main.scss
@@ -2,4 +2,5 @@
 @import '../../elements/_elements';
 @import '../../objects/_objects';
 @import '../../components/_components';
+@import '../../utilities/_overrides';
 
